[gd_scene load_steps=7 format=2]

[ext_resource path="res://Character/RigidBody.gd" type="Script" id=1]
[ext_resource path="res://Character/Character.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0

[sub_resource type="CapsuleShape" id=2]

[sub_resource type="SphereShape" id=3]

[sub_resource type="CapsuleMesh" id=4]

[node name="Character" type="Spatial"]
script = ExtResource( 2 )

[node name="RigidBody" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
mass = 70.0
physics_material_override = SubResource( 1 )
gravity_scale = 8.0
contacts_reported = 5
contact_monitor = true
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource( 1 )

[node name="CollisionShape_Default" type="CollisionShape" parent="RigidBody"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="CollisionShape_Slide" type="CollisionShape" parent="RigidBody"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.5, 0 )
shape = SubResource( 3 )
disabled = true

[node name="MeshInstance" type="MeshInstance" parent="RigidBody"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
visible = false
mesh = SubResource( 4 )
material/0 = null

[node name="Camera Pivot" type="Spatial" parent="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0 )

[node name="Camera" type="Camera" parent="RigidBody/Camera Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5 )

[node name="CameraPosition_Default" type="Position3D" parent="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0 )

[node name="CameraPosition_Slide" type="Position3D" parent="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0 )

[node name="GroundCheck" type="RayCast" parent="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.45058e-09, -1.1, 0 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )

[node name="TopCheck" type="RayCast" parent="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.45058e-09, -1.5, 1.19209e-07 )
enabled = true
cast_to = Vector3( 0, 2.25, 0 )
